Minified contact and project CSS files.

--- a/prepros.config
+++ b/prepros.config
@@ -882,7 +882,27 @@
     },
     "files": [
       {
+        "file": "styles/contact.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "styles/index.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "styles/projects.scss",
         "config": {
           "tasks": {
             "minify-css": {
